--- a/styles/theme.css
+++ b/styles/theme.css
@@ -3,6 +3,50 @@
 @tailwind utilities;
 
 @layer utilities {
+  .background-light850_dark100 {
+    @apply bg-light-850 dark:bg-dark-100;
+  }
+
+  .background-light900_dark200 {
+    @apply bg-light-900 dark:bg-dark-200;
+  }
+
+  .background-light900_dark300 {
+    @apply bg-light-900 dark:bg-dark-300;
+  }
+
+  .background-light800_darkgradient {
+    @apply bg-light-800 dark:dark-gradient;
+  }
+
+  .background-light800_dark400 {
+    @apply bg-light-800 dark:bg-dark-400 !important;
+  }
+
+  .background-light700_dark400 {
+    @apply bg-light-700 dark:bg-dark-400;
+  }
+
+  .background-light700_dark300 {
+    @apply bg-light-700 dark:bg-dark-300;
+  }
+
+  .background-light800_dark400 {
+    @apply bg-light-800 dark:bg-dark-400;
+  }
+
+  .background-light800_dark300 {
+    @apply bg-light-800 dark:bg-dark-300 !important;
+  }
+
+  .background-light800_dark200 {
+    @apply bg-light-800 dark:bg-dark-200;
+  }
+
+  .background-dark400_light900 {
+    @apply dark:bg-dark-400 bg-light-900 !important;
+  }
+
   .h1-bold {
     @apply text-[30px] font-bold leading-[42px] tracking-tighter;
   }
