--- a/styles/theme.css
+++ b/styles/theme.css
@@ -47,6 +47,70 @@
     @apply dark:bg-dark-400 bg-light-900 !important;
   }
 
+  .text-dark100_light900 {
+    @apply text-dark-100 dark:text-light-900 !important;
+  }
+
+  .text-dark200_light900 {
+    @apply text-dark-200 dark:text-light-900;
+  }
+
+  .text-dark200_light800 {
+    @apply text-dark-200 dark:text-light-800 !important;
+  }
+
+  .text-dark300_light700 {
+    @apply text-dark-300 dark:text-light-700;
+  }
+
+  .text-dark400_light700 {
+    @apply text-dark-400 dark:text-light-700;
+  }
+
+  .text-dark500_light700 {
+    @apply text-dark-500 dark:text-light-700 !important;
+  }
+
+  .text-dark500_light500 {
+    @apply text-dark-500 dark:text-light-500;
+  }
+
+  .text-dark500_light400 {
+    @apply text-dark-500 dark:text-light-400;
+  }
+
+  .text-dark300_light900 {
+    @apply text-dark-300 dark:text-light-900 !important;
+  }
+
+  .text-dark400_light800 {
+    @apply text-dark-400 dark:text-light-800;
+  }
+
+  .text-light400_light500 {
+    @apply text-light-400 dark:text-light-500 !important;
+  }
+
+  .text-dark400_light500 {
+    @apply text-dark-400 dark:text-light-500;
+  }
+
+  .text-dark400_light900 {
+    @apply text-dark-400 dark:text-light-900 !important;
+  }
+
+  .text-light400_light500 {
+    @apply text-light-400 dark:text-light-500 !important;
+  }
+
+  .light-border {
+    @apply border-light-800 dark:border-dark-300;
+  }
+
+  .light-border-2 {
+    @apply border-light-700 dark:border-dark-400 !important;
+  }
+
   .h1-bold {
     @apply text-[30px] font-bold leading-[42px] tracking-tighter;
   }
@@ -125,5 +189,48 @@
 
   .subtle-regular {
     @apply text-[10px] font-normal leading-[13px];
+  }
+
+  .placeholder {
+    @apply placeholder:text-light-400 dark:placeholder:text-light-500;
+  }
+
+  .invert-colors {
+    @apply invert dark:invert-0;
+  }
+
+  .shadow-light100_dark100 {
+    @apply shadow-light-100 dark:shadow-dark-100;
+  }
+
+  .shadow-light100_darknone {
+    @apply shadow-light-100 dark:shadow-none;
+  }
+
+  .primary-gradient {
+    background: linear-gradient(129deg, #ff7000 0%, #e2995f 100%);
+  }
+
+  .dark-gradient {
+    background: linear-gradient(
+      232deg,
+      rgba(23, 28, 35, 0.41) 0%,
+      rgba(19, 22, 28, 0.7) 100%
+    );
+  }
+
+  .light-gradient {
+    background: linear-gradient(
+      132deg,
+      rgba(247, 249, 255, 0.5) 0%,
+      rgba(229, 237, 255, 0.25) 100%
+    );
+  }
+
+  .primary-text-gradient {
+    background: linear-gradient(129deg, #ff7000 0%, #e2995f 100%);
+    background-clip: text;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
   }
 }
